- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images (eg, penguin)


DONE:
7/17/08 - rename module.basic package to module.intro
7/17/08 - fix: very short advancing glacier starts off advancing very slowly, then speeds up (fixed by previous 2 changes)
7/17/08 - change timescale so that there is no difference between retreating and advancing (use receding model for both)
7/17/08 - change timescale max to 200 
7/17/08 - fix incorrect assert in setSteadyState
******* 0.00.31 (23129)
7/12/08 - replace penguin with bear
7/9/08 - rename "penguin" to "pan control" throughout, in anticipation of changing the penguin to something else
7/9/08 - change "Sea-level temperature" to "Sea-level air temperature"
7/9/08 - change x-axis and title to "air temperature" on "Temperature vs Elevation" chart
6/18/08 - make BoreholeDrillIconNode's drag offset independent of mvt scale
6/18/08 - if climate is changed while clock is paused, change equilibrium line and intersection with glacier surface
6/18/08 - bugfix: algorithm for ELA ice surface intersection was intersections close to terminus
6/18/08 - change loop in Glacier.updateIceThickness, iterate until thickness==0
6/18/08 - remove Restart clock button, semantics don't make sense for this sim
6/18/08 - verify that "glacial budget vs elevation" graph looks OK with new climate model
******* 0.00.30 (22142)
6/9/08 - fix debris that was getting stuck on below the valley floor
6/9/08 - more changes to climate and glacier model from Archie
6/9/08 - fix infinite loop in IceNode that occurred when glacier length was less than DX
******* 0.00.29 (22088)