@@ -2,16 +2,16 @@
 
 package edu.colorado.phet.glaciers.module.advanced;
 
-import edu.colorado.phet.glaciers.view.PlayArea;
+import edu.colorado.phet.glaciers.view.GlaciersPlayArea;
 
 
 public class AdvancedController {
 
     private final AdvancedModel _model;
-    private final PlayArea _playArea;
+    private final GlaciersPlayArea _playArea;
     private final AdvancedControlPanel _controlPanel;
     
-    public AdvancedController( AdvancedModel model, PlayArea playArea, AdvancedControlPanel controlPanel ) {
+    public AdvancedController( AdvancedModel model, GlaciersPlayArea playArea, AdvancedControlPanel controlPanel ) {
         
         _model = model;
         _playArea = playArea;
