@@ -2,16 +2,16 @@
 
 package edu.colorado.phet.glaciers.module.experiments;
 
-import edu.colorado.phet.glaciers.view.PlayArea;
+import edu.colorado.phet.glaciers.view.GlaciersPlayArea;
 
 
 public class ExperimentsController {
 
     private final ExperimentsModel _model;
-    private final PlayArea _playArea;
+    private final GlaciersPlayArea _playArea;
     private final ExperimentsControlPanel _controlPanel;
     
-    public ExperimentsController( ExperimentsModel model, PlayArea playArea, ExperimentsControlPanel controlPanel ) {
+    public ExperimentsController( ExperimentsModel model, GlaciersPlayArea playArea, ExperimentsControlPanel controlPanel ) {
         
         _model = model;
         _playArea = playArea;
